--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,7 +46,7 @@
 }
 
 body {
-    background-image: url("../images/books.jpg");
+    background-image: url("../images/background3.jpg");
   color:black;
   background-color: translucent;
   font-family: 'Anton', sans-serif;
